Development
    Ignore single instance preference when running in embedded mode
    When in single instance mode and you start a second player with a filename, 
        the filename is added to the playlist of the first instance 
        so now you can select a bunch of files in Nautilus and say open in gnome-mplayer
        and all the files are opened in a single instance
    Added preference --new_instance, to override single_instance
    Made single instance a new preference on Advanced Tab
    Made show details a new preference on Advanced Tab
    Made new option --showdetails
    Fix resize issues with details and playlist open
    German translation by 25Hertz
    When mouse is over progress bar, show tooltip showing media time where the mouse is
    Menu button being shown in realplayer mode, hide it.
    Minor cleanups
    Create tooltips and restruction some code
    Create function seconds to string (timestamp)
    Mute during drag seek
    Select volume button icon size correctly
    Comment out tight button settings due to icon clipping
    Tighten up the buttons a little more
    Change progress bar seeking method to only work in 1% increments
    Make progress bar function like a slider bar
    Fix open DVD from folder, it was incorrectly using dvdnav:// instead of dvd://
    Hard code disable_deinterlace to be TRUE by default
    Apply dbus patches from Sebastian Reichel
    Fix single_instance command line flag
0.7.0
    Add function to take a screenshot of the playing video
    Hook scroll wheel to FF and REW controls
    Updated tr and ko translations
    Add --single_instance command line option to only allow one instance to run
    Added menu option and hot key 'A' to switch angles Issue 35
    Fix Issue 43, audio file after fullscreen video and drag and drop of a folder to the playlist
    Add tooltips to Preferences screen
    Make sure that DVD w/o folder options open media from /dev/dvd